[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/GGS/assets/icons/types/bool.svg" type="Texture" id=1]
[ext_resource path="res://addons/GGS/assets/icons/add_key.svg" type="Texture" id=2]
[ext_resource path="res://addons/GGS/assets/icons/remove_key.svg" type="Texture" id=3]
[ext_resource path="res://systems/cfc/builder/key/LabelName.gd" type="Script" id=4]
[ext_resource path="res://systems/cfc/builder/key/uiAddScript.gd" type="Script" id=5]
[ext_resource path="res://systems/cfc/builder/key/OptionSelection.gd" type="Script" id=6]

[node name="uiKeyScript" type="HBoxContainer"]
margin_right = 153.0
margin_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnvLabel" type="Label" parent="."]
margin_right = 28.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "env:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnvSelection" type="OptionButton" parent="."]
margin_left = 32.0
margin_right = 100.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Board"
script = ExtResource( 6 )

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 104.0
margin_right = 108.0
margin_bottom = 28.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 112.0
margin_right = 466.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 354.0
margin_bottom = 28.0

[node name="ScriptNameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 81.0
margin_bottom = 23.0
text = "script name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScriptName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 85.0
margin_right = 143.0
margin_bottom = 28.0
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="SubjectLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 147.0
margin_top = 5.0
margin_right = 199.0
margin_bottom = 23.0
text = "subject:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubjectSelection" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 203.0
margin_right = 290.0
margin_bottom = 28.0
text = "target"
icon = ExtResource( 1 )
script = ExtResource( 6 )

[node name="uiAddKey" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 294.0
margin_right = 322.0
margin_bottom = 28.0
hint_tooltip = "Add Key"
size_flags_horizontal = 0
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remove" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 326.0
margin_right = 354.0
margin_bottom = 28.0
hint_tooltip = "Remove Key"
icon = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/uiAddKey" to="." method="_on_uiAddKey_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
